--- a/.github/workflows/public-benchmarks.yaml
+++ b/.github/workflows/public-benchmarks.yaml
@@ -7,6 +7,9 @@ on:
 jobs:
   basic-benchmarks:
     runs-on: ubuntu-latest
+    env:
+      RETH_VERSION: 9d56da53ec0ad60e229456a0c70b338501d923a5
+      GETH_VERSION: 4bc345b22fbee14d3162becd197373a9565b7c6d
 
     steps:
       - name: Harden the runner (Audit all outbound calls)
@@ -35,7 +38,7 @@ jobs:
         id: cache-bin
         with:
           path: ${{ runner.temp }}/bin
-          key: ${{ runner.os }}-binaries
+          key: ${{ runner.os }}-binaries-reth-${{ env.RETH_VERSION }}-geth-${{ env.GETH_VERSION }}
 
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@82dee4ba654bd2146511f85f0d013af94670c4de # v1.4.0
@@ -50,7 +53,7 @@ jobs:
           mkdir -p ${{ runner.temp }}/bin
 
           git clone https://github.com/paradigmxyz/reth
-          git -C reth checkout --force fad870e3508adcc150faa4554111368e0e16f43b
+          git -C reth checkout --force ${{ env.RETH_VERSION }}
 
           pushd reth
           cargo build --features asm-keccak,jemalloc --profile release --bin op-reth --manifest-path crates/optimism/bin/Cargo.toml
@@ -59,7 +62,7 @@ jobs:
           chmod +x ${{ runner.temp }}/bin/reth
 
           git clone https://github.com/ethereum-optimism/op-geth
-          git -C op-geth checkout --force 4bc345b22fbee14d3162becd197373a9565b7c6d
+          git -C op-geth checkout --force ${{ env.GETH_VERSION }}
 
           pushd op-geth
           make geth
